--- a/HOAM_MUSEUM_OF_ART/css/common.css
+++ b/HOAM_MUSEUM_OF_ART/css/common.css
@@ -1,23 +1,6 @@
 @charset "utf-8";
 @import url(default.css);
-@font-face {
-    font-family: 'Roboto';
-    src: url('https://roboto-webfont.googlecode.com/files/Roboto-Light-webfont.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto';
-    src: url('https://roboto-webfont.googlecode.com/files/Roboto-Regular-webfont.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto';
-    src: url('https://roboto-webfont.googlecode.com/files/Roboto-Medium-webfont.woff') format('woff');
-    font-weight: 500;
-    font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @font-face {
     font-family: 'Pretendard';
     src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff') format('woff');
