--- a/KS_WALLCOVERINGS/css/common.css
+++ b/KS_WALLCOVERINGS/css/common.css
@@ -1,42 +1,29 @@
 @charset "utf-8";
 @import url(default.css);
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@font-face {
-    font-family: 'Pretendard';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Pretendard';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 ::selection {
     background-color: transparent;
-    color: #888;
+    color: #6a6f4c;
 }
 ::-webkit-selection {
     background-color: transparent;
-    color: #888;
+    color: #6a6f4c;
 }
 ::-moz-selection {
     background-color: transparent;
-    color: #888;
+    color: #6a6f4c;
 }
 ::-o-selection {
     background-color: transparent;
-    color: #888;
+    color: #6a6f4c;
 }
 
 html, body {
-    font-family: 'Roboto', 'Pretendard', sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
     font-size: 15px;  
-    color: #fdfdfd;
-    background-color: #020202;
-    font-weight: 300; 
+    color: #231916;
+    background-color: #fff;
+    font-weight: 500;
     line-height: 1.2;
     word-break: keep-all;
     word-wrap: break-word; 
