--- a/KS_WALLCOVERINGS/css/main.css
+++ b/KS_WALLCOVERINGS/css/main.css
@@ -2,23 +2,71 @@
 @import url(common.css);
 @import url(layout.css);
 
+.visual {
+    position: relative;
+}
+.visual::before {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 1300px;
+    height: 600px;
+    content: "";
+    background-color: #C1B6A4;
+}
 .visual .swiper {
-    margin-left: 22.5%;
-    width: 1400px;
-    height: 800px;
-    z-index: -2;
+    width: 1920px;
+    height: 980px;
     }
 .visual .swiper-slide img {
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 72.91%;
+    height: 81.63%;
     object-fit: cover;
+    margin-left: 22.5%;
+}
+.visual .swiper-slide .tit {
+    width: 1200px;
+    margin: -90px 0 0 273px;
+    opacity: 0;
+}
+.visual .swiper-wrapper li.swiper-slide.swiper-slide-visible.swiper-slide-active .tit {
+    opacity: 1;
+}
+.visual .swiper-slide .tit .tit_top {
+    display: flex;
+    align-items: flex-end;
+    color: #fff;
+}
+.visual .swiper-slide .tit .tit_top h2 {
+    font-weight: 200;
+    font-size: 50px;
+}
+.visual .swiper-slide .tit .tit_top strong {
+    margin-left: 10px;
+    font-weight: 200;
+    font-size: 30px;
+}
+.visual .swiper-slide .tit .tit_bottom {
+    display: flex;
+    margin-top: 50px;
+    color: #F5F5EB;
+    font-size: 18px;
+}
+.visual .swiper-slide .tit .tit_bottom p {
+    margin-left: 20px;
+}
+.visual .swiper-slide .tit .tit_bottom span {
+    margin-left: 50px;
 }
 
 /* 슬라이드 숫자 그룹 */
 .visual .swiper-pagination.swiper-pagination-fraction.swiper-pagination-horizontal {
     color:rgba(245, 245, 235, 0.4);
     font-size: 15px;
+    position: absolute;
+    left: -662px;
+    bottom: 274px;
 }
 
 /* 슬라이드 진행 숫자 */
@@ -26,3 +74,311 @@
     font-size: 30px;
     color: #fff;
 }
+
+
+.collection .list {
+    position: relative;
+}
+.collection .list h2 {
+    font-weight: 200;
+    font-size: 50px;
+    margin-top: 130px;
+}
+.collection .list .swiper {
+    width: 1920px;
+    margin-top: -190px;
+}
+.collection .list .swiper >ul >li {
+    display: flex;
+}
+.collection .list .swiper >ul >li .swatch {
+    position: absolute;
+    left: 41.66%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.collection .list .swiper >ul >li .swatch .text_box strong {
+    font-size: 30px;
+}
+.collection .list .swiper >ul >li .txt {
+    width: 41.66%;
+    margin-top: 220px;
+    font-size: 20px;
+    opacity: 0;
+}
+.collection .swiper-wrapper li.swiper-slide.swiper-slide-visible.swiper-slide-active .txt {
+    opacity: 1;
+}
+.collection .list .swiper >ul >li .txt >ul {
+    margin-top: 60px;
+}
+.collection .list .swiper >ul >li .txt >ul >li {
+    margin-top: 30px;
+    font-weight: 200;
+}
+.collection .list .swiper >ul >li .txt >ul >li span {
+    position: relative;
+}
+.collection .list .swiper >ul >li .txt >ul >li span::before {
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    content: "";
+    border-bottom: 1px solid #231916;
+    width: 30px;
+}
+.collection .list .swiper >ul >li .txt >ul >li.active span::before {
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    content: "";
+    border-bottom: 1px solid #231916;
+    width: 100%;
+}
+.collection .list .swiper >ul >li .txt >ul >li.active {
+    font-weight: 500;
+}
+
+.collection .list .swiper >ul >li .txt >ul >li:first-child {
+    margin-top: 0;
+}
+.collection .list .swiper >ul >li .photo {
+    width: 58.33%;
+}
+
+
+/****************************슬라이드 진행바, 카운트****************************/
+.collection .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
+    background: var(--swiper-pagination-color, #231916);
+}
+.collection .paging.swiper-pagination-progressbar.swiper-pagination-horizontal {
+    width: 35%;
+    height: 5px;
+    left: 0;
+    bottom: 100px;
+    top: auto;
+    background-color: transparent;
+    border: 1px solid #231916;
+}
+.collection .box_slidebar {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+}
+.collection .box_slidebar .count {
+    margin-bottom: 115px;
+    padding-left: 30px;
+}
+.collection .box_slidebar .count strong {
+    font-size: 30px;
+    color: #231916;
+}
+.collection .box_slidebar .count span {
+    color: #C1B6A4;
+    font-weight: 300;
+}
+.collection .box_slidebar button.collection-next,
+.collection .box_slidebar button.collection-prev {
+    position: absolute;
+    bottom: 117px;
+    width: 11px;
+    height: 19px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.collection .box_slidebar button.collection-next {
+    left: 90px;
+    background-image: url("data:image/svg+xml,%3Csvg width='8' height='15' viewBox='0 0 8 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.707275' width='10' height='1' transform='rotate(45 0.707275 0)' fill='%23231916'/%3E%3Crect width='10' height='1' transform='matrix(-0.707107 0.707107 0.707107 0.707107 7.07104 6.38916)' fill='%23231916'/%3E%3C/svg%3E%0A");
+}
+.collection .box_slidebar button.collection-prev {
+    left: 0;
+    background-image: url("data:image/svg+xml,%3Csvg width='8' height='15' viewBox='0 0 8 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='10' height='1' transform='matrix(-0.707107 0.707107 0.707107 0.707107 7.07104 0)' fill='%23231916'/%3E%3Crect x='0.707275' y='6.38916' width='10' height='1' transform='rotate(45 0.707275 6.38916)' fill='%23231916'/%3E%3C/svg%3E%0A");
+}
+/****************************슬라이드 진행바, 카운트****************************/
+
+
+.style {
+    background-color: #C1B6A4;
+    position: relative;
+    height: 1600px;
+    margin-top: -3px;
+}
+.style .photos img {
+    position: absolute;
+}
+.style .photos img.style_1 {
+    right: 500px;
+    bottom: 74px;
+}   
+.style .photos img.style_2 {
+    top: 235px;
+    left: 517px;
+}
+.style .photos img.style_3 {
+    left: 592px;
+    bottom: 74px;
+}
+.style .photos img.style_4 {
+    top: 85px;
+    right: 609px;
+}
+.style .photos img.style_5 {
+    top: 180px;
+    right: 91px;
+}
+.style .photos img.style_6 {
+    top: 145px;
+    left: 60px;
+}
+.style .photos img.style_7 {
+    bottom: 202px;
+    right: -1px;
+}
+.style .photos img.style_8 {
+    left: 96px;
+    bottom: 368px;
+}
+.style .photos_m {
+    display: none;
+}
+.style .text h2 {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 50px;
+    color: #F5F5EB;
+    text-align: center;
+}
+.style .more {
+    position: absolute;
+    left: 50%;
+    bottom: 45%;
+    transform: translate(-50%, 50%);
+    color: #F5F5EB;
+    font-weight: 200;
+    transition: 0.3s;
+}
+.style .more::before {
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    content: "";
+    border-bottom: 1px solid #F5F5EB;
+    width: 100%;
+    transition: 0.3s;
+}
+.style .more:hover {
+    color: #231916;
+    font-weight: 500;
+}
+.style .more:hover::before {
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    content: "";
+    border-bottom: 1px solid #231916;
+    width: 100%;
+}
+
+.material .tit {
+    text-align: center;
+}
+.material h2 {
+    margin-top: 100px;
+    font-weight: 200;
+    font-size: 50px;
+}
+.material .txt_1 {
+    margin-top: 150px;
+}
+.material .txt_1 h3 {
+    font-size: 50px;
+    font-weight: 200;
+}
+.material .txt_2 h3 {
+    margin-top: 100px;
+    font-size: 50px;
+    font-weight: 200;
+}
+.material .txt_1 p,
+.material .txt_2 p {
+    font-size: 20px;
+    margin-top: 20px;
+}
+.material .txt_1 img,
+.material .txt_2 img {
+    margin-top: 30px;
+}
+
+.news .tit {
+    text-align: center;
+    position: relative;
+}
+.news .tit::before {
+    position: absolute;
+    left: 0;
+    top: 84px;
+    content: "";
+    width: 100%;
+    border-bottom: 2px solid #231916;
+}
+.news .tit h2 {
+    font-size: 50px;
+    font-weight: 200;
+    margin-top: 200px;
+}
+.news .swiper ul {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 70px;
+}
+.news .swiper ul li {
+    margin-right: 30px;
+    width: 33.33%;
+}
+.news .swiper ul li:last-child {
+    margin: 0;
+}
+.news .swiper ul li a {
+    display: block;
+}
+.news .swiper ul li a:hover img {
+    transform: scale3d(1.05, 1.05, 1);
+
+}
+.news .swiper ul li a img {
+    margin-bottom: 20px;
+    transition: 0.55s;
+}
+.news .swiper ul li a span {
+    font-weight: 200;
+}
+.news .swiper ul li a h3 {
+    font-size: 20px;
+    margin-top: 10px;
+}
+.news .more {
+    text-align: right;
+    margin-top: 50px;
+}
+.news .more button {
+    font-weight: 200;
+    position: relative;
+    transition: 0.3s;
+}
+.news .more button::before {
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    border-bottom: 1px solid #231916;
+    width: 100%;
+    content: "";
+}
+.news .more button:hover {
+    font-weight: 500;
+}
+
